--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
 
 <body>
     <main>
+        <section class="submit-section">
+            <div class="star"><img src="interactive-rating-component-main/images/icon-star.svg"></div>
+            <h2>How did we do?</h2>
+            <p>Please let us know how we did with your support request. All feedback is appreciated 
+            to help us improve our offering!
+            </p>
+            <div class="ratings">
+                <div class="rating">1</div>
+                <div class="rating">2</div>
+                <div class="rating">3</div>
+                <div class="rating">4</div>
+                <div class="rating">5</div>
+            </div>
+            <button type="submit">SUBMIT</button>
 
+        </section>
     </main>
 </body>
 </html>
